--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,8 @@ project(Project3)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")
 
-add_executable(Server server/server.cpp server/server_utility.cpp Functions.cpp server/CircularBuffer.cpp server/CircularBuffer.h server/thread_functions.cpp server/thread_functions.h)
-add_executable(Client client/client.cpp client/client_utility.cpp Functions.cpp client/threads.cpp client/threads.h)
+add_executable(Server server/server.cpp server/server_utility.cpp common/Functions.cpp server/CircularBuffer.cpp server/CircularBuffer.h server/thread_functions.cpp server/thread_functions.h)
+add_executable(Client client/client.cpp client/client_utility.cpp common/Functions.cpp client/threads.cpp client/threads.h)
 
 add_executable(test_Server server/testServer.cpp)
 add_executable(test_Client client/testClient.cpp)
